doc: add video
