# src/main/docs/routes.ts
@@ -102,7 +102,8 @@ export function RegisterRoutes(app: express.Router) {
 
             function GetCheckoutDoc_FindPayment(request: any, response: any, next: any) {
             const args = {
-                    _paymentId: {"in":"query","name":"paymentId","required":true,"dataType":"string"},
+                    _paymentId: {"in":"query","name":"paymentId","dataType":"string"},
+                    orderId: {"in":"query","name":"orderId","dataType":"string"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
